labs/lab-01-deploy-first-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: lab-01
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
