labs/lab-01-deploy-first-app/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app
  namespace: lab-01
  labels:
    app: my-app
spec:
  to:
    kind: Service
    name: my-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
